fix modal overflow issue

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -11,6 +11,7 @@
   transform: translate(-50%, -50%);
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 10px;
+  overflow: hidden auto;
   
   .close_button_wrapper{
     position: absolute;
